[package]
name = "helmworks-render-check"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "pleme-io GitHub Action — pull a helmworks chart, render with operator values, fail on contract violations"
license = "MIT"
authors = ["drzzln <drzzln@protonmail.com>"]
repository = "https://github.com/pleme-io/helmworks-render-check"

[[bin]]
name = "helmworks-render-check"
path = "src/main.rs"

[dependencies]
pleme-actions-shared = { git = "https://github.com/pleme-io/pleme-actions-shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"

[lints.clippy]
pedantic = "warn"
